apps/cloudbeaver/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudbeaver
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: cloudbeaver
    homelab.local/OwnedBy: ElPoshoX
